--- a/Patients No-Show Prediction Model.ipynb
+++ b/Patients No-Show Prediction Model.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_proj_shruti.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCPUNba+S30IqECvJT+GF9",
+      "authorship_tag": "ABX9TyPmrUoBDUKNjs7MHE1tkTce",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1749,8 +1749,6 @@
       },
       "source": [
         "#sns.stripplot(data = df, y = 'waiting_time', jitter = True)\n",
-        "\n",
-        "\n",
         "sns.distplot(df['waiting_time'], hist=True, kde=False, color = 'blue')\n",
         "plt.show()"
       ],
@@ -2850,34 +2848,45 @@
       "metadata": {
         "id": "s8lht6VqP-Oe",
         "colab_type": "code",
-        "outputId": "4039d9c5-b94e-4988-c31a-9e5b9d146762",
+        "outputId": "e73f04e6-f2b1-402f-e09a-c1d7a4e64dd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 123
         }
       },
       "source": [
-        "print(X_train.shape)\n",
-        "print(X_test.shape)\n",
-        "print(X_val.shape)\n",
-        "print(y_train.shape)\n",
-        "print(y_test.shape)\n",
-        "print(y_val.shape)"
+        "\n",
+        "print('Shape of X train data: ',X_train.shape)\n",
+        "print('Shape of X test data: ',X_test.shape)\n",
+        "print('Shape of X validation data: ',X_val.shape)\n",
+        "print('Shape of Y train data: ', y_train.shape)\n",
+        "print('Shape of Y test data: ', y_test.shape)\n",
+        "print('Shape of Y validation data: ',y_val.shape)"
       ],
-      "execution_count": 221,
+      "execution_count": 241,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(195270, 11)\n",
-            "(111583, 11)\n",
-            "(65090, 11)\n",
-            "(195270,)\n",
-            "(111583,)\n",
-            "(65090,)\n"
+            "Shape of X train data:  (195270, 11)\n",
+            "Shape of X test data:  (111583, 11)\n",
+            "Shape of X validation data:  (65090, 11)\n",
+            "Shape of Y train data:  (195270,)\n",
+            "Shape of Y test data:  (111583,)\n",
+            "Shape of Y validation data:  (65090,)\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-wJmWpgquuT5",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Logistic Regression"
       ]
     },
     {
@@ -2906,7 +2915,7 @@
         "# Fit the model to the data\n",
         "lr = lr.fit(X_train, y_train)\n",
         "\n",
-        "print (\"\\n\\n ---Logistic Regression Model---\")\n",
+        "print (\"Logistic Regression Model\")\n",
         "lr_auc = roc_auc_score(y_test, lr.predict(X_test))\n",
         "\n",
         "print (\"Logistic Regression AUC = %2.2f\" % lr_auc)\n",
@@ -2978,6 +2987,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vdcl9Omtu0bE",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Random Forest Classifier"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Kp5OBBZdT8It",
@@ -2989,6 +3008,8 @@
         }
       },
       "source": [
+        "#Implementing Random Forest Classifier to predict no-show\n",
+        "\n",
         "from sklearn.metrics import accuracy_score\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import r2_score,accuracy_score,roc_auc_score\n",
@@ -3018,6 +3039,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u4maXpccu_Dx",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Gaussian Naive Bayes Classifier"
       ]
     },
     {
@@ -3057,6 +3088,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VDAv6lfVvIrW",
+        "colab_type": "text"
+      },
+      "source": [
+        "### XGBoost Classifier"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "RUK5WU2vTw5o",
@@ -3072,9 +3113,7 @@
         "\n",
         "xgm.fit(X_train, y_train)\n",
         "\n",
-        "predict_train = model.predict(X_train)\n",
-        "print('Predicting')\n",
-        "\n"
+        "predict_train = model.predict(X_train)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -3093,10 +3132,10 @@
       "source": [
         "from xgboost import XGBClassifier\n",
         "\n",
-        "# Create the Original, Upsampled, and Downsampled training sets\n",
+        "# Create the Original training sets\n",
         "methods_data = {\"Original\": (X_train, y_train)}\n",
         "\n",
-        "# Loop through each type of training sets and apply 5-Fold CV using Logistic Regression\n",
+        "# Loop through training sets and apply 5-Fold CV using XGBoost Classifier\n",
         "# By default in cross_val_score StratifiedCV is used\n",
         "for method in methods_data.keys():\n",
         "    lr_results = cross_val_score(XGBClassifier(), methods_data[method][0], methods_data[method][1], cv=5, scoring='roc_auc')\n",
@@ -3127,6 +3166,7 @@
         "outputId": "de7bc769-5faf-474e-fa45-4ee402ffa7a0"
       },
       "source": [
+        "#checking accuracy \n",
         "for method in methods_data.keys():\n",
         "    lr_results = cross_val_score(XGBClassifier(), methods_data[method][0], methods_data[method][1], cv=5, scoring='accuracy')\n",
         "    print(f\"The best accuracy Score for {method} data:\")\n",
@@ -3152,6 +3192,8 @@
         "colab": {}
       },
       "source": [
+        "#implementing GridSearchCV and XGBoost Classifier\n",
+        "\n",
         "from sklearn.model_selection import GridSearchCV\n",
         "\n",
         "gbm_param_grid = {\n",
@@ -3197,7 +3239,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Catboost"
+        "### Catboost"
       ]
     },
     {
@@ -3255,6 +3297,8 @@
         "outputId": "575a3f9e-56ae-4ba8-942b-ed3aed168aaf"
       },
       "source": [
+        "#implementing CatBoostClassfier\n",
+        "\n",
         "from catboost import CatBoostClassifier\n",
         "for method in methods_data.keys():\n",
         "    lr_results = cross_val_score(CatBoostClassifier(), methods_data[method][0], methods_data[method][1], cv=5, scoring='accuracy')\n",
