--- a/Patients No-Show Prediction Model.ipynb
+++ b/Patients No-Show Prediction Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Final_ML.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPDQJO7L/u5s9u0pGN+5Pxf",
+      "authorship_tag": "ABX9TyM2YCPUeZ5N4LnVT3MQs+VG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,11 +53,11 @@
       "metadata": {
         "id": "XLhq4ZBpWZKy",
         "colab_type": "code",
+        "outputId": "d7f4b1d9-0f06-40e9-fa59-2c281367eb9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "d7f4b1d9-0f06-40e9-fa59-2c281367eb9c"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -83,7 +83,7 @@
         "%matplotlib inline\n",
         "%config InlineBackend.figure_format = 'svg'"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
       "source": [
         "ls"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +155,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive/')"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,25 +171,13 @@
       "metadata": {
         "id": "vqWMGtveWpum",
         "colab_type": "code",
-        "outputId": "ea4fb88d-7aef-4d32-a2fb-c58d08079ea1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
-        "cd /content/gdrive/My Drive/Courses/Spring 2020/ML/project/"
+        "#cd into directory of your dataset "
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/gdrive/My Drive/Courses/Spring 2020/ML/project\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -207,7 +195,7 @@
         "print('Dataset shape:', df.shape[0], '\\n\\n')\n",
         "df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +393,7 @@
         "df.columns = new_col_name\n",
         "df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +543,7 @@
       "source": [
         "df.dtypes"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +586,7 @@
         "#checking for null values\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +634,7 @@
         "        \n",
         "data(df)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,7 +703,7 @@
         "#basic statistics \n",
         "df.describe()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +856,7 @@
       "source": [
         "df.hist(figsize=(16,8));"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -922,7 +910,7 @@
       "source": [
         "df.no_show.unique()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -953,7 +941,7 @@
         "df['en_no_show'] = df['no_show'].map({'showup': 1, 'noshow': 0})\n",
         "df.head(3)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1078,7 +1066,7 @@
         "ax = sns.countplot(x='no_show', data =df)\n",
         "ax.set(xlabel=\"no_show\", ylabel = \"count\")"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1146,7 +1134,7 @@
         "sns.distplot(df['age'], hist=True, kde=False, color = 'blue')\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1204,7 +1192,7 @@
         "max_age = df['age'].max()\n",
         "print (\"Age now spans values from: {} to {}.\".format(min_age, max_age))"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1246,7 +1234,7 @@
         "ax.set_title(\"No of appointments by age\")\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1296,7 +1284,7 @@
         "show_prob_age = pd.crosstab(df['age_bin'], df['no_show'], normalize='index')\n",
         "show_prob_age"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1425,7 +1413,7 @@
         "print(df.schedule_day.head())\n",
         "print(df.appointment_day.head())"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1468,7 +1456,7 @@
         "df['waiting_time'] = df['waiting_time'].astype(np.int64)\n",
         "df.waiting_time.dtype"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1515,7 +1503,7 @@
         "                                                          'August':8, 'September':9, 'October':10, 'November':11, 'December':12})\n",
         "df.head()"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1704,7 +1692,7 @@
         "df['hour_of_day'] = df.schedule_day.apply(calculate_hour)\n",
         "df.head(5)"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1902,7 +1890,7 @@
         "sns.distplot(df['waiting_time'], hist=True, kde=False)\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1941,7 +1929,7 @@
         "    sns.countplot(x=date_feild, data=df, ax=ax)\n",
         "    ax.set_title(date_feild.upper())"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1990,7 +1978,7 @@
         "print('Minimum waiting time is:', df['waiting_time'].min())\n",
         "print('Maximum waiting time is:', df['waiting_time'].max())"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2051,7 +2039,7 @@
         "  fig.suptitle(f'Probability of {var} with respect to No-Show \\n\\n', fontsize=12, fontweight=\"bold\")\n",
         "  ax.set_title(var.upper())"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2121,7 +2109,7 @@
         "df[\"en_week_day\"] = df[\"en_week_day\"].cat.codes\n",
         "df.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2325,7 +2313,7 @@
         "gender_noshow = pd.crosstab(df['gender'], df['no_show'], normalize='index')\n",
         "gender_noshow"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2402,7 +2390,7 @@
         "ct = pd.crosstab(df.gender, df['no_show'])\n",
         "ct.plot.bar(stacked=True)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2473,7 +2461,7 @@
         "    ax = fig.add_subplot(3, 3, i+1)\n",
         "    df.groupby([var, 'no_show'])[var].count().unstack('no_show').plot(ax=ax, kind='bar', stacked=True)"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2509,7 +2497,7 @@
         "    chi2, p, dof,ex = chi2_contingency(pd.crosstab(index=df[column], columns=df[\"en_no_show\"]), correction=False)\n",
         "    print ('chi-squared test- p value for {} is: {r:6.5f}'. format(column,r = p))"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2555,7 +2543,7 @@
         "# Draw the heatmap with the mask and correct aspect ratio\n",
         "sns.heatmap(corr, mask=mask, cmap=cmap, vmax=.3, center=0,square=True, linewidths=.5, cbar_kws={\"shrink\": .5})"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2660,7 +2648,7 @@
         "print('Shape of Y test data: ', y_test.shape)\n",
         "print('Shape of Y validation data: ',y_val.shape)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2731,7 +2719,7 @@
         "predictions = lr.predict(X_test)\n",
         "print(classification_report(y_test, lr.predict(X_test)))"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2778,7 +2766,7 @@
         "    print (lr_results.mean())\n",
         "    print(\"Accuracy: \", lr_results_acc.mean())"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2834,7 +2822,7 @@
         "print (\"RFC accuracy score = %2.2f\" % RFC_auc)\n",
         "print(\"RFC ROC score = %2.2f\" % roc_auc_score(y_test, y_pred))\n"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2880,7 +2868,7 @@
         "print (\"Naive Bayes accuracy scoure= %2.2f\" % GNB_auc)\n",
         "print (\"Naive Bayes ROC score= %2.2f\" % roc_auc_score(y_test, GNB.predict(X_test)))"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2947,7 +2935,7 @@
         "    print(f\"The best roc_auc Score for data:\")\n",
         "    print (lr_results.mean())"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2978,7 +2966,7 @@
         "    print(f\"The best accuracy Score for {method} data:\")\n",
         "    print (lr_results.mean())"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3066,11 +3054,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "myv70MoewL3d",
+        "outputId": "83557405-f062-4a66-ac0f-0b7e33f94d7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "83557405-f062-4a66-ac0f-0b7e33f94d7c"
+        }
       },
       "source": [
         "#implementing CatBoostClassfier\n",
@@ -3081,7 +3069,7 @@
         "    print(f\"The best accuracy Score for {method} data:\")\n",
         "    print (lr_results.mean())"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8115,7 +8103,7 @@
         "print(\"Best ROC found: \", np.sqrt(np.abs(grid_cb.best_score_)))\n",
         "print(\"Best ROC for Test found: \", roc_auc_score(y_test, grid_cb.predict(X_test)))"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8219,7 +8207,7 @@
         "print('old data shape: ',df.shape[0])\n",
         "print('new data shape: ',data.shape[0])"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8273,7 +8261,7 @@
         "features_train, features_test, labels_train, labels_test = \\\n",
         "    train_test_split(new_features, new_labels, test_size=0.3, random_state=60,)"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8342,7 +8330,7 @@
         "for i in range(1, 10, 1):\n",
         "    print (\"  {}.  feature: {} ({})\".format(i, features_train.columns[i], importances[indices[i]]))"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8418,7 +8406,7 @@
         "selectbest_plot.set_xlabel('Features')\n",
         "selectbest_plot.set_ylabel('Score')"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8491,7 +8479,7 @@
       "source": [
         "labels_test.value_counts()"
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8527,7 +8515,7 @@
         "# Null Accuracy, ie. accuracy achieved by a dumb model if it only predicted a patient would show up to an appointment\n",
         "print (\"\\n Null accuracy is therefore \", max(labels_test.mean(), 1 - labels_test.mean()))"
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8571,7 +8559,7 @@
         "# dependent variable\n",
         "new_y = data['en_no_show']"
       ],
-      "execution_count": 64,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8648,7 +8636,7 @@
         "new_predictions = new_feature_lr.predict(new_X_test)\n",
         "print(classification_report(new_y_test, new_feature_lr.predict(new_X_test)))"
       ],
-      "execution_count": 66,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8695,7 +8683,7 @@
         "    print (feature_lr_results.mean())\n",
         "    print(\"Accuracy: \", feature_lr_results_acc.mean())"
       ],
-      "execution_count": 67,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8764,7 +8752,7 @@
         "print('ROC score on training dataset:',metrics.roc_auc_score(new_y_train, model.predict(new_X_train)))\n",
         "print('ROC score on Testing dataset',metrics.roc_auc_score(new_y_test, y_pred))"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8802,7 +8790,7 @@
       "source": [
         "!pip install vecstack"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8847,7 +8835,7 @@
         "                           random_state = 0, \n",
         "                           verbose =2)"
       ],
-      "execution_count": 71,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -8905,7 +8893,7 @@
         "                           random_state = 0, \n",
         "                           verbose =2)"
       ],
-      "execution_count": 72,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -9002,7 +8990,7 @@
         "#verifing number of columns\n",
         "len(features_train.columns)"
       ],
-      "execution_count": 79,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9033,7 +9021,7 @@
         "# Train the model\n",
         "history = model.fit(features_train,labels_train,epochs=25,batch_size=100,validation_split=0.3)"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -9121,7 +9109,7 @@
         "print(f'Test loss : {loss:.5}')\n",
         "print(f'Test accuracy : {accuracy:.5}')"
       ],
-      "execution_count": 78,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
